@@ -1,7 +1,6 @@
 package io.kontur.disasterninja.service.layers.providers;
 
 import io.kontur.disasterninja.client.InsightsApiGraphqlClient;
-import io.kontur.disasterninja.controller.exception.WebApplicationException;
 import io.kontur.disasterninja.domain.*;
 import io.kontur.disasterninja.domain.enums.LayerCategory;
 import io.kontur.disasterninja.dto.BivariateStatisticDto;
@@ -11,11 +10,12 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.annotation.Order;
-import org.springframework.http.HttpStatus;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import javax.annotation.PostConstruct;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
@@ -29,24 +29,34 @@ import static org.springframework.core.Ordered.HIGHEST_PRECEDENCE;
 @RequiredArgsConstructor
 public class BivariateLayerProvider implements LayerProvider {
     private static final Logger LOG = LoggerFactory.getLogger(BivariateLayerProvider.class);
+    public static final String LAYER_PREFIX = "BIV__";
     private static final String MARKDOWN_LINK_PATTERN = "[%s](%s)";
     private static final Pattern URL_SEARCH_PATTERN = Pattern.compile("(http|ftp|https):\\/\\/([\\w_-]+(?:(?:\\.[\\w_-]+)+))([\\w.,@?^=%&:\\/~+#-]*[\\w@?^=%&\\/~+#-])");
     private final InsightsApiGraphqlClient insightsApiGraphqlClient;
     @Value("${kontur.platform.tiles.host}")
     private String tilesHost;
-    private List<String> bivariateLayerIds = List.of();
+    private volatile Map<String, Layer> bivariateLayers = new ConcurrentHashMap<>();
 
     @PostConstruct
-    private void init() {
+    @Scheduled(initialDelayString = "${kontur.platform.insightsApi.layersReloadInterval}",
+        fixedRateString = "${kontur.platform.insightsApi.layersReloadInterval}")
+    private void reloadLayers() {
+        LOG.info("Loading bivariate layers from insights-api");
         try {
             BivariateStatisticDto bivariateStatisticDto = insightsApiGraphqlClient.getBivariateStatistic().get();
             if (bivariateStatisticDto != null && bivariateStatisticDto.getOverlays() != null) {
-                bivariateLayerIds = bivariateStatisticDto.getOverlays().stream()
-                    .map(BivariateLayerLegendQuery.Overlay::name)
-                    .collect(Collectors.toList());
+                synchronized (this) {
+                    bivariateLayers = bivariateStatisticDto.getOverlays().stream()
+                        .map(overlay -> fromOverlay(overlay, bivariateStatisticDto.getIndicators()))
+                        .collect(Collectors.toMap(Layer::getId, it -> it));
+                }
+                LOG.info("Loaded bivariate layers: {}",
+                    String.join(", ", bivariateLayers.keySet()));
+            } else {
+                LOG.error("Can't load list of available bivariate layers: no overlays received");
             }
         } catch (Exception e) {
-            LOG.warn("Can't load list of available bivariate layers: {}", e.getMessage(), e);
+            LOG.error("Can't load list of available bivariate layers: {}", e.getMessage(), e);
         }
     }
 
@@ -55,23 +65,35 @@ public class BivariateLayerProvider implements LayerProvider {
      */
     @Override
     public List<Layer> obtainLayers(LayerSearchParams searchParams) {
-        try {
-            BivariateStatisticDto bivariateStatisticDto = insightsApiGraphqlClient.getBivariateStatistic().get();
-            return bivariateStatisticDto.getOverlays().stream()
-                .map(overlay -> fromOverlay(overlay, bivariateStatisticDto.getIndicators()))
-                .collect(Collectors.toList());
-        } catch (Exception e) {
-            LOG.error("Can't load bivariate layers: {}", e.getMessage(), e);
-            throw new WebApplicationException("Can't load bivariate layers", HttpStatus.BAD_GATEWAY);
-        }
+        reloadLayersIfEmpty();
+        return bivariateLayers.values().stream().toList();
     }
 
     @Override
     public boolean isApplicable(String layerId) {
-        if (bivariateLayerIds.isEmpty()) {
-            init();
+        return layerId.startsWith(LAYER_PREFIX);
+    }
+
+    /**
+     * @return Bivariate layer by ID from insights-api graphql api
+     */
+    @Override
+    public Layer obtainLayer(String layerId, LayerSearchParams searchParams) {
+        if (!isApplicable(layerId)) {
+            return null;
         }
-        return bivariateLayerIds.contains(layerId);
+        reloadLayersIfEmpty();
+        return bivariateLayers.get(layerId);
+    }
+
+    private void reloadLayersIfEmpty() {
+        if (bivariateLayers.isEmpty()) {
+            synchronized (this) {
+                if (bivariateLayers.isEmpty()) {
+                    reloadLayers();
+                }
+            }
+        }
     }
 
     protected Layer fromOverlay(BivariateLayerLegendQuery.Overlay overlay, List<BivariateLayerLegendQuery.Indicator> indicators) {
@@ -83,7 +105,7 @@ public class BivariateLayerProvider implements LayerProvider {
         List<String> copyrights = copyrightsFromIndicators(legend, indicators);
 
         return Layer.builder()
-            .id(overlay.name())
+            .id(getIdWithPrefix(overlay.name()))
             .name(overlay.name())
             .description(overlay.description())
             .source(LayerSource.builder()
@@ -104,25 +126,8 @@ public class BivariateLayerProvider implements LayerProvider {
             .build();
     }
 
-    /**
-     * @return Bivariate layer by ID from insights-api graphql api
-     */
-    @Override
-    public Layer obtainLayer(String layerId, LayerSearchParams searchParams) {
-        if (!isApplicable(layerId)) {
-            return null;
-        }
-        try {
-            BivariateStatisticDto bivariateStatisticDto = insightsApiGraphqlClient.getBivariateStatistic().get();
-            return bivariateStatisticDto.getOverlays().stream()
-                    .filter(it -> layerId.equals(it.name())).findFirst()
-                    .map(overlay -> fromOverlay(overlay, bivariateStatisticDto.getIndicators()))
-                    .orElseGet(() -> null);
-        } catch (Exception e) {
-            LOG.error("Can't load bivariate layer by id {}: {}",
-                layerId, e.getMessage(), e);
-            throw new WebApplicationException("Can't load bivariate layer", HttpStatus.BAD_GATEWAY);
-        }
+    private String getIdWithPrefix(String id) {
+        return LAYER_PREFIX + id;
     }
 
     private Legend bivariateLegendFromOverlay(BivariateLayerLegendQuery.Overlay overlay) {
